src/styles/Header.css
.site-header {
  padding: 50px;
  display: flex;
  justify-content: center;
  width: 100%;
}

.header-content {
  display: flex;
  flex-direction: column;
  align-items: left;
}

.portfolio-title {
  margin: 0;
  color: #fff;
  font-size: 10rem;
  font-weight: 700;
  font-family: 'Roboto', sans-serif;
  text-decoration: none;
  transition: color 0.3s ease;
}

.portfolio-title:hover {
  color: orange;
}

.github-link {
  margin-top: 10px;
  color: #fff;
  font-size: 4rem;
  font-family: 'Roboto', sans-serif;
  text-decoration: underline;
  transition: color 0.3s ease;
}

.github-link:hover {
  color: orange;
}

.header-separator {
  width: 30%;
  height: 1px;
  background-color: #fff;
  margin-top: 150px;
  margin-bottom: 50px;
  align-self: flex-end;
}

.header-nav {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 50%;
  align-self: flex-end;
  align-items: flex-end;
  margin-top: 10px;
}

.nav-button {
  color:#fff;
  font-family: 'Roboto', sans-serif;
  font-size: 5rem;
  font-weight: 500;
  text-decoration: none;
  padding: 5px 10px;
  transition: color 0.3s ease;
}

.nav-button:hover {
  color: yellow;
}

